# Cx

./: .gitignore  README.md  crash_match.cx  pyproject.toml
Docs/examples/: 01_hello.cx  02_linked_list.cx  03_allocator.cx  03_real_test.cx  03_real_test.ll  04_shapes.cx  05_functional_test.cx  05_memory_manager.cx
Docs/syntax/: README.md  attributes.md  control_flow.md  errors.md  functions.md  generics.md  memory.md  modules.md  operators.md  types.md  variables.md
cx/: __init__.py  __version__.py  config.py  main.py
cx/backend/: __init__.py  linker.py  llvm_codegen.py  runtime.py
cx/frontend/: __init__.py  ast.py  lexer.py  parser.py
cx/middleend/: __init__.py
cx/middleend/ir/: __init__.py  builder.py  nodes.py
cx/middleend/optimizer/: __init__.py  constant_fold.py  dce.py  inline.py  pass_manager.py
cx/middleend/semantic/: __init__.py  symbol_table.py  type_checker.py  type_system.py
cx/utils/: __init__.py  errors.py  logger.py  source_loc.py
scripts/: build_msi.py  uninstall.py
tests/: __init__.py  conftest.py  test_bug_fixes.py
